--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,8 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
+
+ion-header {
+    // margen automático según notch o barra de estado 
+    margin-top: env(safe-area-inset-top, 0px);
+}
